<resources>
    <string name="app_name">FirstCode</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="this_is_firstActivity">This is FirstActivity</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="title_text">Title Text</string>
    <string name="edit">Edit</string>

    <string name="type_something_here">Type something here</string>
    <string name="send">Send</string>

    <string name="account">Account:</string>
    <string name="password">Password:</string>
    <string name="remember_password">Remember password</string>
    <string name="text_password">textPassword</string>
    <string name="login">Login</string>
    <string name="send_force_offline_broadcast">Send force offline broadcast</string>
    <string name="call_phone">Call phone</string>
    <string name="create_database">Create database</string>

    <string name="send_notice">Send notice</string>
    <string name="take_phone">Take phone</string>
    <string name="choose_form_album">Choose from album</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="start_download">Start Download</string>
    <string name="pause_download">Pause Download</string>
    <string name="cancel_download">Cancel Download</string>

    <string name="fruits">Fruits</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="setting">Setting</string>
</resources>
