<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.magic.rain.cn.firstcode.activity.service.ServicePracticeActivity">

    <Button
        android:id="@+id/button_start_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_download"/>

    <Button
        android:id="@+id/button_pause_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_download"
        />

    <Button
        android:id="@+id/button_cancel_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_download"
        />
</LinearLayout>
